Overflow fix
Overflow fix

--- a/demo/map.css
+++ b/demo/map.css
@@ -3,7 +3,7 @@
 }
 .adc-map .wrapper {
     position:relative;
-    /*overflow:hidden;*/
+    overflow:hidden;
 }
 .adc-map .container {
     top:0;
